crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__schema_stmt_recovery_2.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"schema A[\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: None,
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: Some(
                        Node {
                            node: Arguments {
                                args: [],
                                defaults: [],
                                ty_list: [],
                            },
                            filename: "",
                            line: 1,
                            column: 8,
                            end_line: 1,
                            end_column: 9,
                        },
                    ),
                    mixins: [],
                    body: [],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 9,
        },
    ],
    comments: [],
}
