crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__schema_stmt_recovery_21.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"@deprecated(\nschema A:\n    a: \"#)"
---
Module {
    filename: "",
    doc: None,
    body: [],
    comments: [],
}
